Bug 229271 unwanted "white space" in function getLDAPValue fron autoconfig/prefcalls.js r=alecf sr=dmose